Extracted calls to JabRefFrame from OpenEntryEditorAction